--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,1 +1,11 @@
+@import "./variables.module.scss";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: $font-poppins;
+}
