add mobile navbar content

--- a/styles/SubHeader.module.scss
+++ b/styles/SubHeader.module.scss
@@ -2,7 +2,7 @@
 
 .subHeader {
   width: 100%;
-  height: 46px;
+  height: $subheader-height;
   color: $white;
   background-color: $lime-green;
 
@@ -12,7 +12,7 @@
     justify-content: space-between;
     gap: 2rem;
     margin-inline: auto;
-    padding-inline: 1.5rem;
+    padding-inline: $padding-content;
     max-width: 1200px;
     height: 100%;
   }
