--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,5 +7,18 @@
 }
 
 body {
+  min-height: 100vh;
   font-family: $font-poppins;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+svg {
+  cursor: pointer;
 }
