--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -2,6 +2,7 @@
 
 // FONT-FAMILY
 $font-poppins: "Poppins", sans-serif;
+
 // FONT-WEIGHT
 $normal: 400;
 $medium: 500;
@@ -11,7 +12,26 @@ $bold: 700;
 // COLORS
 $lime-green: #a4c639;
 $black: #000;
+$light-black: #1e1e1e;
 $white: #fff;
 $white-opacity: rgb(255, 255, 255, 0.3);
 $dark-grey: #232323;
 $grey: #666666;
+
+// PADDING
+$padding-content: 1.5rem;
+
+// SUBHEADER HEIGHT
+$subheader-height: 46px;
+
+// HEADER HEIGHT
+$header-height: 90px;
+
+// MIXINS
+@mixin breakpoint($point) {
+  @if $point == md {
+    @media (min-width: 48rem) {
+      @content;
+    }
+  }
+}
