--- a/styles/SubHeader.module.scss
+++ b/styles/SubHeader.module.scss
@@ -1,59 +1,66 @@
 @import "./variables.module.scss";
 
 .subHeader {
-  width: 100%;
-  height: $subheader-height;
-  color: $white;
-  background-color: $lime-green;
+  display: none;
+}
 
-  .container {
+@media (min-width: 48rem) {
+  .subHeader {
+    display: block;
+    width: 100%;
+    height: $subheader-height;
+    color: $white;
+    background-color: $lime-green;
+
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 2rem;
+      margin-inline: auto;
+      padding-inline: $padding-content;
+      max-width: 1200px;
+      height: 100%;
+    }
+  }
+
+  .left {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-    margin-inline: auto;
-    padding-inline: $padding-content;
-    max-width: 1200px;
+    align-items: stretch;
     height: 100%;
-  }
-}
 
-.left {
-  display: flex;
-  align-items: stretch;
-  height: 100%;
+    .column {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding-inline: 1.5rem;
+      border-inline-start: $white-opacity 1px solid;
 
-  .column {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    padding-inline: 1.5rem;
-    border-inline-start: $white-opacity 1px solid;
+      &:last-child {
+        border-inline-end: $white-opacity 1px solid;
+      }
 
-    &:last-child {
-      border-inline-end: $white-opacity 1px solid;
-    }
-
-    p {
-      font-weight: $medium;
-      font-size: 14px;
+      p {
+        font-weight: $medium;
+        font-size: 14px;
+      }
     }
   }
-}
 
-.right {
-  display: flex;
-  align-items: stretch;
-  height: 100%;
-
-  .box {
+  .right {
     display: flex;
-    align-items: center;
-    padding: 1rem;
-    border-inline-start: $white-opacity 1px solid;
+    align-items: stretch;
+    height: 100%;
 
-    &:last-child {
-      border-inline-end: $white-opacity 1px solid;
+    .box {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      border-inline-start: $white-opacity 1px solid;
+
+      &:last-child {
+        border-inline-end: $white-opacity 1px solid;
+      }
     }
   }
 }
