--- a/styles/home/RequestForm.module.scss
+++ b/styles/home/RequestForm.module.scss
@@ -1,19 +1,26 @@
-@import "./variables.module.scss";
+@import "../variables.module.scss";
+@import "../breakpoints.module.scss";
 
-.hero {
-  position: absolute;
-  bottom: -12rem;
+.request {
   width: 100%;
-  padding-block: 3rem;
+  padding-block: 2.5rem;
   background-color: $lime-green;
 
   .container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 2rem;
     margin-inline: auto;
     padding-inline: $padding-content;
     max-width: 1200px;
+    text-align: center;
+    @include md {
+      justify-content: space-between;
+      gap: initial;
+      text-align: initial;
+    }
 
     .title {
       padding-block-end: 0.5rem;
