--- a/styles/home/HomeServices.module.scss
+++ b/styles/home/HomeServices.module.scss
@@ -3,6 +3,8 @@
 
 .services {
   padding-block-start: 8rem;
+  width: 100%;
+
   .container {
     margin-inline: auto;
     padding-inline: $padding-content;
@@ -19,13 +21,51 @@
 
   span {
     color: $grey;
+    font-size: 15px;
   }
 
-  .title {
+  .head {
     font-weight: $semi;
     font-size: 36px;
     span {
+      font-size: 36px;
       color: $lime-green;
+    }
+  }
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-block-start: 3rem;
+
+  .card {
+    max-width: 350px;
+    .text {
+      padding-block: 1.5rem;
+      padding-inline: 1.5rem;
+      .title {
+        padding-block-end: 1rem;
+        font-size: 20px;
+      }
+
+      .description {
+        padding-block-end: 1.5rem;
+        line-height: 2;
+        font-size: 14px;
+        color: $grey;
+      }
+
+      .button {
+        @include buttonGreen;
+
+        &:hover {
+          color: $lime-green;
+          background-color: $white;
+        }
+      }
     }
   }
 }
